- Fix a bug that bnx(4) panics on shutdown. Stop callout before restroy.   Reported by Andreas Gustafsson in PR#53265. - Make sure not to re-arm the callout when we are about to detach. Same as   if_bge.c rev. 1.292. - Use pci_intr_establish_xname().